# ssynth-cli

./: .npmignore  CLAUDE.md  Cargo.toml  README.md  eslint.config.js  package-lock.json  package.json
lib/: cli.js  client.js  config.js  error.js  hwbuild.js  ignore.js  output.js  parse.js  upload.js
lib/commands/: api-key.js  artifact-download.js  artifact-list.js  config-show.js  job-cancel.js  job-clone.js  job-list.js  job-logs.js  job-retry.js  job-status.js  job-submit.js  login.js  profile.js  project.js  targets.js  usage.js
src/: cli.rs  client.rs  config.rs  error.rs  hwbuild.rs  ignore.rs  main.rs  models.rs  output.rs  parse.rs  upload.rs
src/commands/: api_key.rs  artifact.rs  config_show.rs  job_cancel.rs  job_clone.rs  job_list.rs  job_logs.rs  job_retry.rs  job_status.rs  job_submit.rs  login.rs  mod.rs  project.rs  targets.rs  usage.rs
test/: client.test.js  config.test.js  ignore.test.js  parse.test.js
