[package]
name = "ssynth"
version = "0.1.0"
edition = "2021"
description = "CLI for SuperSynth FPGA synthesis platform"
license = "GPL-3.0-only"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env", "color"] }
colored = "2"
comfy-table = "7"
dirs = "5"
flate2 = "1"
futures-util = "0.3"
ignore = "0.4"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
